# odoo-mcp-server

./: .gitignore  README.md  pyproject.toml
butopea_mcp/: __manifest__.py
butopea_mcp/controllers/: main.py
odoo_mcp/controllers/: main.py
src/butopea_mcp_server/: __init__.py  odoo_client.py  server.py
src/odoo_mcp_server/: odoo_client.py  server.py
